Added Angular UI Router basics

--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,11 @@
 
     <!-- Site/application content here -->
 
+    <div ui-view="header"></div>
 
-
-
+    <div ui-view="content"></div>
+    
+    <div ui-view="footer"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
