--- a/app/index.html
+++ b/app/index.html
@@ -26,11 +26,7 @@
 
     <!-- Site/application content here -->
 
-    <div ui-view="header"></div>
-
-    <div ui-view="content"></div>
-
-    <div ui-view="footer"></div>
+    <div ui-view="view"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
