--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -1,4 +1,24 @@
-<div class="container">
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">{{$ctrl.brand}}</a>
+        </div>
+        <!-- Generated navbar -->
+        <div>
+            <ul class="nav navbar-nav">
+                <li ng-repeat="menu in $ctrl.menu">
+                    <a href="{{menu.component}}">{{menu.name}}
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- generated navbar -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+<!--<div class="container">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
@@ -24,4 +44,4 @@
             </ul>
         </div>
     </nav>
-</div>
+</div>-->
