--- a/app/common/footer/footer.html
+++ b/app/common/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="container text-center" id="footer">
+<div class="text-center" id="footer">
     <div class="row">
         <ul class="list-inline" id="footer-menu-links">
             <li><a href="#">Contact</a></li>
