--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -1,25 +1,5 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">{{$ctrl.brand}}</a>
-        </div>
-        <!-- Generated navbar -->
-        <div>
-            <ul class="nav navbar-nav">
-                <li ng-repeat="menu in $ctrl.menu">
-                    <a href="{{menu.component}}">{{menu.name}}
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <!-- generated navbar -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
-
-<!--<div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
                 <span class="sr-only">Toggle navigation</span>
@@ -27,21 +7,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ui-sref="app"><img src="images/logo.png" height=40 width=40 id="logo"></a>
+            <a class="navbar-brand" ui-sref="app" href="#">DappStack</a>
         </div>
-        <div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
-            <ul class="nav navbar-nav">
-                <li class="navbar-right"><a href="#">Sign In</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Dapp Catalog</a></li>
-                <li><a href="#">Dapp News</a></li>
-                <li><a href="#">About</a></li>
-                <li id="search-li" class="text-center">
-                    <form class="navbar-nav navbar-form">
-                        <input type="search" class="form-control" id="search-bar" placeholder="Search Dapps..." ng-model="searchBox">
-                    </form>
-                </li>
+        <!-- All Navbar items that will collapse upon resize -->
+        <div class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
+            <ul class="nav navbar-nav navbar-right" style="display:inline-block">
+                <li ng-repeat="menu in $ctrl.menu"><a href="{{menu.component}}">{{menu.name}}</a></li>
             </ul>
+            <form class="navbar-form" id="search-form">
+                <div class="form-group" style="display:inline;">
+                    <input type="text" class="form-control" id="search-input" placeholder="Search Dapps...">
+                </div>
+            </form>
         </div>
-    </nav>
-</div>-->
+    </div>
+</nav>
