--- a/app/index.html
+++ b/app/index.html
@@ -56,11 +56,15 @@
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="/app.module.js"></script>
     <script src="/common/common.module.js"></script>
+    <script src="/components/components.module.js"></script>
     <script src="/common/footer/footer.module.js"></script>
     <script src="/common/footer/footer.component.js"></script>
     <script src="/common/nav-bar/nav-bar.module.js"></script>
     <script src="/common/nav-bar/nav-bar.component.js"></script>
     <script src="/common/nav-bar/nav-bar.controller.js"></script>
+    <script src="/components/dapps/dapp-list-item/dapp-list-item.module.js"></script>
+    <script src="/components/dapps/dapp-list-item/dapp-list-item.component.js"></script>
+    <script src="/components/dapps/dapp-list-item/dapp-list-item.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
