--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,9 @@
     <script src="/components/dapps/dapp-list-item/dapp-list-item.module.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.component.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.controller.js"></script>
+    <script src="/components/dapps/dapps.module.js"></script>
+    <script src="/components/dapps/dapps.component.js"></script>
+    <script src="/components/dapps/dapps.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
