--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="../bower_components/angular-css/angular-css.min.js"></script>
     <script src="/app.module.js"></script>
     <script src="/common/common.module.js"></script>
     <script src="/components/components.module.js"></script>
