--- a/app/index.html
+++ b/app/index.html
@@ -49,10 +49,11 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="../bower_components/angular/angular.min.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="../bower_components/angular-css/angular-css.min.js"></script>
     <script src="/app.module.js"></script>
@@ -69,6 +70,9 @@
     <script src="/components/dapps/dapps.module.js"></script>
     <script src="/components/dapps/dapps.component.js"></script>
     <script src="/components/dapps/dapps.controller.js"></script>
+    <script src="/components/dapps/dapp-dialog/dapp-dialog.module.js"></script>
+    <script src="/components/dapps/dapp-dialog/dapp-dialog.component.js"></script>
+    <script src="/components/dapps/dapp-dialog/dapp-dialog.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
