--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 
     <div ui-view="header"></div>
 
-    <div ui-view="content"></div>
+    <div ui-view="content" id="content-area"></div>
     
     <div ui-view="footer"></div>
 
@@ -50,7 +50,6 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
