added home component

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,9 @@
     <script src="/components/dapps/dapp-list-item/dapp-list-item.module.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.component.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.controller.js"></script>
+    <script src="/components/home/home.module.js"></script>
+    <script src="/components/home/home.component.js"></script>
+    <script src="/components/home/home.controller.js"></script>    
     <script src="/components/dapps/dapps.module.js"></script>
     <script src="/components/dapps/dapps.component.js"></script>
     <script src="/components/dapps/dapps.controller.js"></script>
