mockdata and dappfactory setup

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
     <script src="/components/dapps/dapps.module.js"></script>
     <script src="/components/dapps/dapps.component.js"></script>
     <script src="/components/dapps/dapps.controller.js"></script>
+    <script src="/components/dapps/dapps.factory.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.module.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.component.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.controller.js"></script>
