--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,9 @@
     <script src="/components/dapps/dapp-dialog/dapp-dialog.module.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.component.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.controller.js"></script>
+    <script src="/components/dapps/dapp-dialog/dapp-about/dapp-about.module.js"></script>
+    <script src="/components/dapps/dapp-dialog/dapp-about/dapp-about.component.js"></script>
+    <script src="/components/dapps/dapp-dialog/dapp-about/dapp-about.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
