--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,9 @@
     <script src="/components/dapps/dapp-dialog/dapp-about/dapp-about.module.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-about/dapp-about.component.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-about/dapp-about.controller.js"></script>
+    <script src="/components/profile/profile.module.js"></script>
+    <script src="/components/profile/profile.component.js"></script>
+    <script src="/components/profile/profile.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
