--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,12 @@
     <script src="/components/profile/profile.module.js"></script>
     <script src="/components/profile/profile.component.js"></script>
     <script src="/components/profile/profile.controller.js"></script>
+    <script src="/components/profile/profile-favorites/profile-favorites.module.js"></script>
+    <script src="/components/profile/profile-favorites/profile-favorites.component.js"></script>
+    <script src="/components/profile/profile-favorites/profile-favorites.controller.js"></script>
+    <script src="/components/profile/profile-favorites/favorite/favorite.module.js"></script>
+    <script src="/components/profile/profile-favorites/favorite/favorite.component.js"></script>
+    <script src="/components/profile/profile-favorites/favorite/favorite.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
