incorporating lb server for final endpoint configuration

--- a/app/index.html
+++ b/app/index.html
@@ -56,19 +56,31 @@
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="../bower_components/angular-css/angular-css.min.js"></script>
     <script src="/app.module.js"></script>
+    <script src="/lb-services.js"></script>
     <script src="/common/common.module.js"></script>
     <script src="/components/components.module.js"></script>
     <script src="/common/footer/footer.module.js"></script>
     <script src="/common/footer/footer.component.js"></script>
+    <script src="/common/auth/auth.module.js"></script>
+    <script src="/common/auth/auth.service.js"></script>
     <script src="/common/nav-bar/nav-bar.module.js"></script>
     <script src="/common/nav-bar/nav-bar.component.js"></script>
     <script src="/common/nav-bar/nav-bar.controller.js"></script>
+    <script src="/common/auth/login/login.module.js"></script>
+    <script src="/common/auth/login/login.component.js"></script>
+    <script src="/common/auth/login/login.controller.js"></script>
+    <script src="/common/auth/register/register.module.js"></script>
+    <script src="/common/auth/register/register.component.js"></script>
+    <script src="/common/auth/register/register.controller.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.module.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.component.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.controller.js"></script>
     <script src="/components/home/home.module.js"></script>
     <script src="/components/home/home.component.js"></script>
-    <script src="/components/home/home.controller.js"></script>    
+    <script src="/components/home/home.controller.js"></script>
+    <script src="/components/dapp-catalog/dapp-catalog.module.js"></script>
+    <script src="/components/dapp-catalog/dapp-catalog.component.js"></script>
+    <script src="/components/dapp-catalog/dapp-catalog.controller.js"></script>     
     <script src="/components/dapps/dapps.module.js"></script>
     <script src="/components/dapps/dapps.component.js"></script>
     <script src="/components/dapps/dapps.controller.js"></script>
