--- a/app/common/auth/login/login.html
+++ b/app/common/auth/login/login.html
@@ -6,23 +6,23 @@
         &nbsp;
     </div>
     <div>
-        <form ng-submit="doLogin()">
+        <form ng-submit="vm.doLogin()">
             <div class="form-group">
                 <label class="sr-only" for="username">Username</label>
-                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="loginData.username"/>
+                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="vm.loginData.username"/>
             </div>
             <div class="form-group">
                 <label class="sr-only" for="password">Password</label>
-                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="loginData.password"/>
+                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="vm.loginData.password"/>
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" ng-model="rememberMe"/> Remember me
+                    <input type="checkbox" ng-model="vm.rememberMe"/> Remember me
                 </label>
             </div>
             <button type="submit" class="btn btn-info btn-sm">Sign in</button>
-            <button type="button" class="btn btn-default btn-sm" ng-click="closeThisDialog('Cancel')">Cancel</button> &nbsp; &nbsp;
-            <a ng-click="openRegister()">Click here to register</a>
+            <button type="button" class="btn btn-default btn-sm" ng-click="vm.closeThisDialog('Cancel')">Cancel</button> &nbsp; &nbsp;
+            <a ng-click="vm.openRegister()">Click here to register</a>
         </form>
     </div>
 </div>
