--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -7,12 +7,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ui-sref="app" href="#">DappStack</a>
+            <a class="navbar-brand" ui-sref="app" href="vm.logo">DappStack</a>
         </div>
         <!-- All Navbar items that will collapse upon resize -->
         <div class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
             <ul class="nav navbar-nav navbar-right" style="display:inline-block">
-                <li ng-repeat="menu in $ctrl.menu"><a href="{{menu.component}}">{{menu.name}}</a></li>
+                <li ng-if="!loggedIn"><a ng-click="vm.openLogin()">
+                    <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                </li>
+                <li ng-if="loggedIn">
+                    <a>{{vm.username}}</a>
+                </li>
+                <li ng-if="loggedIn">
+                    <a ng-click="vm.logOut()">
+                    <span class="glyphicon glyphicon-log-in"></span> Logout</a>
+                </li>
             </ul>
             <form class="navbar-form" id="search-form">
                 <div class="form-group" style="display:inline;">
