--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -12,15 +12,18 @@
         <!-- All Navbar items that will collapse upon resize -->
         <div class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
             <ul class="nav navbar-nav navbar-right" style="display:inline-block">
-                <li ng-if="!loggedIn"><a ng-click="vm.openLogin()">
-                    <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                <li ng-if="!vm.loggedIn">
+                    <a ng-click="vm.openLogin()">
+                        <span class="glyphicon glyphicon-log-in"></span> Login
+                    </a>
                 </li>
-                <li ng-if="loggedIn">
+                <li ng-if="vm.loggedIn">
                     <a>{{vm.username}}</a>
                 </li>
-                <li ng-if="loggedIn">
+                <li ng-if="vm.loggedIn">
                     <a ng-click="vm.logOut()">
-                    <span class="glyphicon glyphicon-log-in"></span> Logout</a>
+                        <span class="glyphicon glyphicon-log-in"></span> Logout
+                    </a>
                 </li>
             </ul>
             <form class="navbar-form" id="search-form">
