--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,9 @@
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
+    <link href="../bower_components/ng-dialog/css/ngDialog.min.css" rel="stylesheet"> 
+    <link href="../bower_components/ng-dialog/css/ngDialog-theme-default.min.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
   </head>
 
@@ -51,10 +53,11 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="../bower_components/angular-css/angular-css.min.js"></script>
+    <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
+    <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>  
     <script src="/app.module.js"></script>
     <script src="/lb-services.js"></script>
     <script src="/common/common.module.js"></script>
@@ -67,10 +70,8 @@
     <script src="/common/nav-bar/nav-bar.component.js"></script>
     <script src="/common/nav-bar/nav-bar.controller.js"></script>
     <script src="/common/auth/login/login.module.js"></script>
-    <script src="/common/auth/login/login.component.js"></script>
     <script src="/common/auth/login/login.controller.js"></script>
     <script src="/common/auth/register/register.module.js"></script>
-    <script src="/common/auth/register/register.component.js"></script>
     <script src="/common/auth/register/register.controller.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.module.js"></script>
     <script src="/components/dapps/dapp-list-item/dapp-list-item.component.js"></script>
@@ -84,7 +85,6 @@
     <script src="/components/dapps/dapps.module.js"></script>
     <script src="/components/dapps/dapps.component.js"></script>
     <script src="/components/dapps/dapps.controller.js"></script>
-    <script src="/components/dapps/dapps.factory.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.module.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.component.js"></script>
     <script src="/components/dapps/dapp-dialog/dapp-dialog.controller.js"></script>
