--- a/app/common/search/search.html
+++ b/app/common/search/search.html
@@ -1,6 +1,6 @@
 <!-- SEARCH FORM -->
-<form class="navbar-form" id="search-form" ng-submit="vm.performSearch()">
-    <div class="form-group" style="display:inline;">
+<form ng-submit="vm.performSearch()" id="search-form">
+    <div class="form-group">
         <input type="text" ng-model="vm.query" class="form-control" id="search-input" placeholder="Search Dapps...">
     </div>
 </form>
