--- a/app/common/footer/footer.html
+++ b/app/common/footer/footer.html
@@ -1,20 +1,20 @@
-<div class="container text-center" id="footer">
-    <div class="row">
-        <ul class="list-inline" id="footer-menu-links">
-            <li><a href="#">Contact</a></li>
-            <li>|</li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li>|</li>
-            <li><a href="#">Terms & Conditions</a></li>
-        </ul>
-    </div>
-    <div class="row">
-        <ul class="list-inline" id="footer-menu-social">
-            <li>Twitter</li>
-            <li>Facebook</li>
-        </ul>
-    </div>
-    <div class="row" id="legal-line">
+<div class="container" id="footer">
+
+    <ul class="d-flex justify-content-center list-inline" id="footer-menu-links">
+        <li><a href="#">Contact</a></li>
+        <li>|</li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li>|</li>
+        <li><a href="#">Terms & Conditions</a></li>
+    </ul>
+
+
+    <ul class="d-flex justify-content-center list-inline" id="footer-menu-social">
+        <li>Twitter</li>
+        <li>Facebook</li>
+    </ul>
+
+    <div class="d-flex justify-content-center align-items-center">
         <p>&copy 2017 Dapp Stack</p>
     </div>
 </div>
