--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -1,32 +1,30 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" ui-sref="app" href="vm.logo">DappStack</a>
-        </div>
-        <!-- All Navbar items that will collapse upon resize -->
-        <div class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
-            <ul class="nav navbar-nav navbar-right" style="display:inline-block">
-                <li ng-if="!vm.loggedIn">
-                    <a ng-click="vm.openLogin()">
-                        <span class="glyphicon glyphicon-log-in"></span> Login
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-between fixed-top">
+
+        <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarElements" aria-controls="navbarElements" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" ui-sref="app">DappStack</a>
+
+        <!-- All Navbar items that will collapse upon resize. Using Bootstrap javascript due to Angular Bootstrap directive issues with Bootstrap 4 -->
+        <div class="collapse navbar-collapse" id="navbarElements">
+            <div class="dropdown-divider"></div>
+            <ul class="navbar-nav">
+                <li class="nav-item align-self-center" ng-if="!vm.loggedIn">
+                    <a class="nav-link" ng-click="vm.openLogin()">
+                        <span class="fa fa-sign-in"></span> Login
                     </a>
                 </li>
-                <li ng-if="vm.loggedIn">
-                    <a ui-sref="app.profile">{{vm.username}}</a>
+                <li class="nav-item align-self-center" ng-if="vm.loggedIn">
+                    <a class="nav-link" ui-sref="app.profile">{{vm.username}}</a>
                 </li>
-                <li ng-if="vm.loggedIn">
-                    <a ng-click="vm.logOut()">
-                        <span class="glyphicon glyphicon-log-in"></span> Logout
+                <li class="nav-item align-self-center" class="nav-item" ng-if="vm.loggedIn">
+                    <a class="nav-link" ng-click="vm.logOut()">
+                        <span class="fa fa-sign-out"></span> Logout
                     </a>
                 </li>
             </ul>
-            <search-component placeholder="Search Dapps..."></search-component>
+            <search-component class="justify-content-center form-inline" placeholder="Search Dapps..."></search-component>
         </div>
-    </div>
+
 </nav>
