switching to webpack instead of gulp

--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,12 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/main.css -->
-    <link href="../bower_components/tether/dist/css/tether.min.css" rel="stylesheet">
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../bower_components/ng-dialog/css/ngDialog.min.css" rel="stylesheet"> 
-    <link href="../bower_components/ng-dialog/css/ngDialog-theme-default.min.css" rel="stylesheet">
-    <link href="styles/main.css" rel="stylesheet">
+    <!--<link href="../node_modules/tether/dist/css/tether.min.css" rel="stylesheet">
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../node_modules/ng-dialog/css/ngDialog.min.css" rel="stylesheet"> 
+    <link href="../node_modules/ng-dialog/css/ngDialog-theme-default.min.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">-->
     <!-- endbuild -->
   </head>
 
@@ -51,6 +51,7 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <!--<script src="../dist/bundle.js"></script>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -115,7 +116,7 @@
     <script src="/components/profile/profile-favorites/profile-favorites.controller.js"></script>
     <script src="/components/profile/profile-settings/profile-settings.module.js"></script>
     <script src="/components/profile/profile-settings/profile-settings.component.js"></script>
-    <script src="/components/profile/profile-settings/profile-settings.controller.js"></script>
+    <script src="/components/profile/profile-settings/profile-settings.controller.js"></script>-->
     <!-- endbuild -->
 </body>
 </html>
