Updated login/signup with component architecture

--- a/app/common/search/search.html
+++ b/app/common/search/search.html
@@ -1,7 +1,7 @@
 <!-- SEARCH FORM -->
 <form ng-submit="vm.performSearch()" id="search-form">
     <div class="form-group">
-        <input type="text" ng-model="vm.query" class="form-control" id="search-input" placeholder="Search Dapps...">
+        <input type="text" ng-model="vm.query" class="form-control w-100" id="search-input" placeholder="Search Dapps...">
     </div>
 </form>
 
