--- a/app/common/auth/login/login.html
+++ b/app/common/auth/login/login.html
@@ -1,29 +1,33 @@
-<div class="ngdialog-message">
-    <div class="">
-        <h3>Login </h3>
+<div class="container">
+    <div class="d-flex flex-row justify-content-center my-3">
+        <h3>Login</h3>
     </div>
-    <div class="">&nbsp;</div>
-    <div class="">
-        <form ng-submit="doLogin()">
+    <form ng-submit="vm.doLogin()">
+        <div class="d-flex flex-column justify-content-center">
             <div class="form-group">
                 <label class="sr-only" for="username">Username</label>
-                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="loginData.username">
+                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="vm.loginData.username">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="password">Password</label>
-                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="loginData.password">
+                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="vm.loginData.password">
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" ng-model="rememberMe"> Remember me
+                    <input type="checkbox" ng-model="vm.rememberMe"> Remember me?
                 </label>
             </div>
-            <button type="submit" class="btn btn-info btn-sm">Sign in</button>
-            <button type="button" class="btn btn-default btn-sm" ng-click=closeThisDialog("Cancel")>Cancel</button> &nbsp; &nbsp;
-            <a ng-click=openRegister()>Click here to register</a>
-        </form>
-    </div>
-    <div>
-
+        </div>
+        <div class="d-flex flex-row justify-content-between">
+            <div>
+                <button type="submit" class="btn btn-outline-info btn-sm">Sign In</button>
+                <button type="button" class="btn btn-outline-danger btn-sm" ng-click="vm.reject('Cancel')">Cancel</button>
+            </div>
+            <button type="button" class="btn btn-outline-primary btn-sm justify-content-end" ng-click="vm.openRegister()">Sign Up</button>
+        </div>
+    </form>
+    <hr>
+    <div class="d-flex flex-row justify-content-around my-2">
+        <a href="/auth/facebook" class="btn btn-default"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
     </div>
 </div>
