--- a/app/common/auth/register/register.html
+++ b/app/common/auth/register/register.html
@@ -4,34 +4,34 @@
     </div>
     <div class="">&nbsp;</div>
     <div class="">
-        <form ng-submit="doRegister()">
+        <form ng-submit="vm.doRegister()">
             <div class="form-group">
                 <label class="sr-only" for="username">Username</label>
-                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="registration.username">
+                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="vm.registration.username">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="password">Password</label>
-                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="registration.password">
+                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="vm.registration.password">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="email">Email</label>
-                <input type="email" class="form-control input-sm" id="email" placeholder="Email" ng-model="registration.email">
+                <input type="email" class="form-control input-sm" id="email" placeholder="Email" ng-model="vm.registration.email">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="firstname">First Name</label>
-                <input type="text" class="form-control input-sm" id="firstname" placeholder="First Name" ng-model="registration.firstname">
+                <input type="text" class="form-control input-sm" id="firstname" placeholder="First Name" ng-model="vm.registration.firstname">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="lastname">Last Name</label>
-                <input type="text" class="form-control input-sm" id="lastname" placeholder="Last Name" ng-model="registration.lastname">
+                <input type="text" class="form-control input-sm" id="lastname" placeholder="Last Name" ng-model="vm.registration.lastname">
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" ng-model="registration.rememberMe"> Remember me
+                    <input type="checkbox" ng-model="vm.registration.rememberMe"> Remember me?
                 </label>
             </div>
-            <button type="submit" class="btn btn-info btn-sm">Register</button>
-            <button type="button" class="btn btn-default btn-sm" ng-click=closeThisDialog("Cancel")>Cancel</button>
+            <button type="submit" class="btn btn-outline-info btn-sm">Register</button>
+            <button type="button" class="btn btn-outline-danger btn-sm" ng-click="vm.reject()">Cancel</button>
         </form>
     </div>
 </div>
