--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-between fixed-top">
-
         <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarElements" aria-controls="navbarElements" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
             <span class="navbar-toggler-icon"></span>
@@ -10,8 +9,26 @@
         <div class="collapse navbar-collapse" id="navbarElements">
             <div class="dropdown-divider"></div>
             <ul class="navbar-nav">
+                <!-- have each dropdown menu item in the dropdown list item and as an independent list item for responsive adaptation -->
+                <li class="nav-item dropdown align-self-center" id="dropdown-top-menu">
+                    <span class="dropdown-toggle" id="navbarDropdownMenuBtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-ellipsis-h fa-lg"></i>
+                    </span>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLBtn">
+                        <h6 class="dropdown-header">Dapps</h6>
+                        <a class="dropdown-item" ui-sref="app.dapps">Catalog</a>
+                        <div class="dropdown-divider"></div>
+                    </div>
+                </li>
+                <li class="nav-item align-self-center dropdown-single-item">
+                    <a class="nav-link" ui-sref="app.dapps">
+                        <span class="fa fa-magazine"></span> Catalog
+                    </a>
+                </li>
+            </ul>
+            <ul class="navbar-nav" id="id-menu-links">
                 <li class="nav-item align-self-center" ng-if="!vm.loggedIn">
-                    <a class="nav-link" ng-click="vm.openLogin()">
+                    <a class="btn btn-outline-secondary" ng-click="vm.openLogin()">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </li>
@@ -24,7 +41,6 @@
                     </a>
                 </li>
             </ul>
-            <search-component class="justify-content-center form-inline" placeholder="Search Dapps..."></search-component>
+            <search-component placeholder="Search Dapps..."></search-component>
         </div>
-
 </nav>
