--- a/app/common/auth/login/login.html
+++ b/app/common/auth/login/login.html
@@ -5,8 +5,8 @@
     <form ng-submit="vm.doLogin()">
         <div class="d-flex flex-column justify-content-center">
             <div class="form-group">
-                <label class="sr-only" for="username">Username</label>
-                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="vm.loginData.username">
+                <label class="sr-only" for="email">Email</label>
+                <input type="email" class="form-control input-sm" id="email" placeholder="Email" ng-model="vm.loginData.email">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="password">Password</label>
@@ -14,20 +14,17 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" ng-model="vm.rememberMe"> Remember me?
+                    <input type="checkbox" ng-model="vm.loginData.rememberMe"> Remember me?
                 </label>
             </div>
         </div>
+        <hr>
         <div class="d-flex flex-row justify-content-between">
             <div>
-                <button type="submit" class="btn btn-outline-info btn-sm">Sign In</button>
-                <button type="button" class="btn btn-outline-danger btn-sm" ng-click="vm.reject('Cancel')">Cancel</button>
+                <button type="submit" class="btn btn-outline-info">Sign In</button>
+                <button type="button" class="btn btn-outline-danger" ng-click="vm.reject('Cancel')">Cancel</button>
             </div>
-            <button type="button" class="btn btn-outline-primary btn-sm justify-content-end" ng-click="vm.openRegister()">Sign Up</button>
+            <button type="button" class="btn btn-outline-primary justify-content-end" ng-click="vm.openRegister()">Sign Up</button>
         </div>
     </form>
-    <hr>
-    <div class="d-flex flex-row justify-content-around my-2">
-        <a href="/auth/facebook" class="btn btn-default"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
-    </div>
 </div>
