--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -32,7 +32,7 @@
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </li>
-                <li class="nav-item align-self-center" ng-if="vm.loggedIn">
+                <li class="nav-item align-self-center" ng-if="vm.loggedIn && vm.username">
                     <a class="nav-link" ui-sref="app.profile">{{vm.username}}</a>
                 </li>
                 <li class="nav-item align-self-center" class="nav-item" ng-if="vm.loggedIn">
