Admin pages added and bug fixes

--- a/app/common/footer/footer.html
+++ b/app/common/footer/footer.html
@@ -1,20 +1,16 @@
-<div class="container" id="footer">
-
-    <ul class="d-flex justify-content-center list-inline" id="footer-menu-links">
-        <li><a href="#">Contact</a></li>
-        <li>|</li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li>|</li>
-        <li><a href="#">Terms & Conditions</a></li>
-    </ul>
-
-
-    <ul class="d-flex justify-content-center list-inline" id="footer-menu-social">
-        <li>Twitter</li>
-        <li>Facebook</li>
-    </ul>
-
-    <div class="d-flex justify-content-center align-items-center">
+<div class="container-fluid py-3" id="footer">
+    <div class="d-flex flex-row justify-content-center align-content-center py-1">
+        <a href="#"><span class="mx-2">Contact<span></a>
+        <span>|</span>
+        <a href="#"><span class="mx-2">Privacy Policy<span></a>
+        <span>|</span>
+        <a href="#"><span class="mx-2">Terms & Conditions</span></a>
+    </div>
+    <div class="d-flex flex-row justify-content-center align-content-center py-1">
+        <a href="#"><span class="mx-2">Twitter<span></a>
+        <a href="#"><span class="mx-2">Facebook<span></a>
+    </div>
+    <div class="d-flex justify-content-center align-content-center py-1">
         <p>&copy 2017 Dapp Stack</p>
     </div>
 </div>
