--- a/app/common/nav-bar/nav-bar.html
+++ b/app/common/nav-bar/nav-bar.html
@@ -3,42 +3,80 @@
             <span class="sr-only">Toggle navigation</span>
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" ui-sref="app">DappStack</a>
+        <a class="navbar-brand m-auto ml-md-5" ui-sref="app">
+            <img ng-src="./images/DS_logo.png" width="100" height="50">
+        </a>
 
         <!-- All Navbar items that will collapse upon resize. Using Bootstrap javascript due to Angular Bootstrap directive issues with Bootstrap 4 -->
         <div class="collapse navbar-collapse" id="navbarElements">
             <div class="dropdown-divider"></div>
             <ul class="navbar-nav">
-                <!-- have each dropdown menu item in the dropdown list item and as an independent list item for responsive adaptation -->
+                <!-- have each dropdown menu item in the dropdown list item and as an independent list item for responsive display-->
                 <li class="nav-item dropdown align-self-center" id="dropdown-top-menu">
                     <span class="dropdown-toggle" id="navbarDropdownMenuBtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-ellipsis-h fa-lg"></i>
                     </span>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLBtn">
-                        <h6 class="dropdown-header">Dapps</h6>
-                        <a class="dropdown-item" ui-sref="app.dapps">Catalog</a>
-                        <div class="dropdown-divider"></div>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuBtn">
+                        <h5 class="dropdown-header">Dapps</h5>
+                        <a class="dropdown-item" ui-sref="app.dapps">
+                            <span class="fa fa-magazine"></span>Catalog
+                        </a>
+                        <div class="dropdown-divider" ng-show="vm.loggedIn"></div>
+                        <h5 class="dropdown-header" ng-show="vm.loggedIn">Profile</h5>
+                        <a class="dropdown-item" ui-sref="app.profile" ng-show="vm.loggedIn">
+                            <span></span>My Profile
+                        </a>
+                        <a class="dropdown-item" ng-click="vm.logOut()" ng-show="vm.loggedIn">
+                            <span class="fa fa-sign-out"></span> Logout
+                        </a>
+                        <div class="dropdown-divider" ng-show="vm.loggedIn"></div>
+                        <h5 class="dropdown-header" ng-show="vm.loggedIn">Admin</h5>
+                        <a class="dropdown-item" ui-sref="app.admin.managedapps" ng-show="vm.loggedIn">
+                            <span class="fa fa-wrench"></span> Manage App
+                        </a>
                     </div>
                 </li>
+                <h5 class="dropdown-header dropdown-single-item">Dapps</h5>
+                <div class="dropdown-divider dropdown-single-item"></div>
                 <li class="nav-item align-self-center dropdown-single-item">
                     <a class="nav-link" ui-sref="app.dapps">
                         <span class="fa fa-magazine"></span> Catalog
                     </a>
                 </li>
-            </ul>
-            <ul class="navbar-nav" id="id-menu-links">
-                <li class="nav-item align-self-center" ng-if="!vm.loggedIn">
-                    <a class="btn btn-outline-primary" ng-click="vm.openLogin()">
+                <h5 class="dropdown-header dropdown-single-item">Profile</h5>
+                <div class="dropdown-divider dropdown-single-item"></div>
+                <li class="nav-item align-self-center dropdown-single-item" ng-show="!vm.loggedIn">
+                    <a class="nav-link" ng-click="vm.openLogin()">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </li>
-                <li class="nav-item align-self-center" ng-if="vm.loggedIn && vm.username">
-                    <a class="nav-link" ui-sref="app.profile">{{vm.username}}</a>
+                <li class="nav-item align-self-center dropdown-single-item" ng-show="vm.loggedIn && vm.username">
+                    <a class="nav-link" ui-sref="app.profile">
+                        <span class="fa fa-user"></span> {{vm.username}}
+                    </a>
                 </li>
-                <li class="nav-item align-self-center" class="nav-item" ng-if="vm.loggedIn">
-                    <a class="btn btn-outline-secondary" ng-click="vm.logOut()">
+                <li class="nav-item align-self-center dropdown-single-item" ng-show="vm.loggedIn">
+                    <a class="nav-link" ng-click="vm.logOut()">
                         <span class="fa fa-sign-out"></span> Logout
                     </a>
+                </li>
+                <h5 class="dropdown-header dropdown-single-item" ng-show="vm.loggedIn">Admin</h5>
+                <div class="dropdown-divider dropdown-single-item" ng-show="vm.loggedIn"></div>
+                <li class="nav-item align-self-center dropdown-single-item" ng-show="vm.loggedIn">
+                    <a class="nav-link" ui-sref="app.admin.managedapps">
+                        <span class="fa fa-wrench"></span> Manage App
+                    </a>
+                </li>
+
+            </ul>
+            <ul class="navbar-nav" id="id-menu-links">
+                <li class="nav-item align-self-center hidden-sm-down" ng-show="!vm.loggedIn">
+                    <a class="btn btn-outline-primary" style="border-color: white; cursor: pointer" ng-click="vm.openLogin()">
+                        <i class="fa fa-sign-in"></i> Login
+                    </a>
+                </li>
+                <li class="nav-item align-self-center hidden-sm-down" ng-show="vm.loggedIn && vm.username">
+                    <a class="nav-link pr-4" ui-sref="app.profile">{{vm.username}}</a>
                 </li>
             </ul>
             <search-component placeholder="Search Dapps..."></search-component>
